--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,9 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "start": [
+            "bash start.sh"
         ]
     },
     "extra": {
